tests/compilefail46.out
[1mtests/compilefail46.pas:11:9: [0m[1m[91merror:[0m 'For' statements require control variables to be of ordinal type. Variable 'k' is of type 'real'
    11 | 	for k := 0 to j do begin